--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="bg-zinc-950 text-zinc-50 antialiased"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
